Fixed horizontal align of .ball

--- a/Day  16/indexStyle.css
+++ b/Day  16/indexStyle.css
@@ -15,9 +15,6 @@ body{
 	text-align: center;
 }
 /*START*/
-.start{
-
-}
 .start h1{
 	margin-top: 200px;
 	font-size: 4rem;
@@ -52,7 +49,6 @@ body{
 /*GAME*/
 .game{
 	display: none;
-	padding: 0 100px;
 }
 .game header{
 	background-color: #329999;
@@ -65,7 +61,7 @@ body{
 	width: 1000px;
 }
 .game section {
-	width: 300px;
+	width: 240px;
 	margin: auto;
 }
 .ball-container{
